--- a/custom_components/rainforest_emu_2/manifest.json
+++ b/custom_components/rainforest_emu_2/manifest.json
@@ -1,5 +1,5 @@
 {
-  "domain": "rainforest_emu2",
+  "domain": "rainforest_emu_2",
   "name": "Rainforest EMU2",
   "documentation": "https://github.com/h0tw1r3/ha-rainforest-emu2/blob/main/README.md",
   "issue_tracker": "https://github.com/h0tw1r3/ha-rainforest-emu2/issues",
